RESOLVED FIXED239355
WebCore::WorkerStorageConnection::fileSystemGetDirectory could have invalid storageConnection()
https://bugs.webkit.org/show_bug.cgi?id=239355
Summary WebCore::WorkerStorageConnection::fileSystemGetDirectory could have invalid s...
Gabriel Nava Marino
Reported 2022-04-14 15:35:45 PDT
...
Attachments
Patch (1.69 KB, patch)
2022-04-14 15:40 PDT, Gabriel Nava Marino
no flags
Patch for landing (1.69 KB, patch)
2022-04-14 15:40 PDT, Gabriel Nava Marino
no flags
Gabriel Nava Marino
Comment 1 2022-04-14 15:40:08 PDT
Gabriel Nava Marino
Comment 2 2022-04-14 15:40:25 PDT
Created attachment 457652 [details] Patch for landing
EWS
Comment 3 2022-04-14 16:27:45 PDT
Committed r292892 (249662@main): <https://commits.webkit.org/249662@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457652 [details].
Radar WebKit Bug Importer
Comment 4 2022-04-14 16:28:14 PDT
Note You need to log in before you can comment on or make changes to this bug.