WebCore::WorkerStorageConnection::fileSystemGetDirectory could have invalid storageConnection() https://bugs.webkit.org/show_bug.cgi?id=239355

Reviewed by Sihui Liu.

Add a check since storageConnection() can be invalid at this point.

* Modules/storage/WorkerStorageConnection.cpp:
(WebCore::WorkerStorageConnection::fileSystemGetDirectory):

Canonical link: https://commits.webkit.org/249662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292892 268f45cc-cd09-0410-ab3c-d52691b4dbfc